auto/k3s/matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: default
spec:
  selector:
    app: matomo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  clusterIP: None
