auto/k3s/matomo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: matomo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
